--- a/Recipes/hollandaise.html
+++ b/Recipes/hollandaise.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Hollandaise Sauce Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/hollandaise.html">Hollandaise Sauce</a>
+    <h1>Hollandaise Sauce</h1>
 </body>
 </html>
