--- a/Recipes/pancakes.html
+++ b/Recipes/pancakes.html
@@ -15,8 +15,9 @@
 
     <h2>Description</h2>
 
-    <p>This is a recipe for the classic, delicious pancakes like the ones you know and love from your childhood.<br>
-        <br>This easy recipe is sure to satisfy. Top with your favorite maple syrup and a pat of butter.<br> 
+    <p>
+        This is a recipe for the classic, delicious pancakes like the ones you know and love from your childhood.<br>
+        This easy recipe is sure to satisfy. Top with your favorite maple syrup and a pat of butter.<br> 
     </p>
 
     <h2>Ingredients</h2>
