--- a/Recipes/hollandaise.html
+++ b/Recipes/hollandaise.html
@@ -30,7 +30,7 @@
             <li>Pepper</li>
         </ul>
     
-    <h2>Steps</h2>
+    <h2>Directions</h2>
         <ol>
             <li>Combine 1/4 cup butter, egg yolks, lemon juice, and water in a saucepan over low heat.</li>
             <li>Cook, stirring constantly, until butter is melted, about 5 minutes.</li>
