--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/hollandaise.html">Hollandaise Sauce</a>
+    <ul>
+        <li><a href="recipes/hollandaise.html">Hollandaise Sauce</a></li>
+        <li><a href="recipes/pancakes.html">Pancakes</a></li>
+        <li><a href="recipes/meatloaf.html">Meatloaf</a></li>
+    </ul>
+    
 </body>
 </html>
