--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="recipes/hollandaise.html">Hollandaise Sauce</a></li>
         <li><a href="recipes/pancakes.html">Pancakes</a></li>
         <li><a href="recipes/meatloaf.html">Meatloaf</a></li>
+        <li><a href="recipes/test.html">test</a></li>
     </ul>
     
 </body>
