--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/odin-recipes/recipes/hollandaise.html">Hollandaise Sauce</a></li>
+        <li><a href="./recipes/hollandaise.html">Hollandaise Sauce</a></li>
         <li><a href="recipes/pancakes.html">Pancakes</a></li>
         <li><a href="recipes/meatloaf.html">Meatloaf</a></li>
         <li><a href="recipes/test.html">test</a></li>
